[tool.poetry]
name = "site-search"
version = "0.1.0"
description = ""
authors = ["Andrey Vasnetsov <andrey@vasnetsov.com>"]

[tool.poetry.dependencies]

python = ">=3.8,<3.11"
requests = "^2.28.1"
ultimate-sitemap-parser = "^0.5"
beautifulsoup4 = "^4.11.1"
tqdm = "^4.64.0"
sentence-transformers = "^2.2.2"
fastapi = "^0.79.1"
qdrant-client = "0.10.2"
scipy = "1.9.0"
python-dotenv = "^0.21.0"
blingfire = "^0.1.8"
uvicorn = "^0.18.3"

# note: feel free to comment t out and use other version of this library on your local machine
# but for the production deployment, please use the exact version
# Issue to track: https://github.com/python-poetry/poetry/issues/6409
torch = [
    # Python 3.8
    {url="https://download.pytorch.org/whl/cpu/torch-1.12.1%2Bcpu-cp38-cp38-linux_x86_64.whl", markers = "python_version == '3.8' and sys_platform == 'linux' and platform_machine == 'x86_64'"},
    {url="https://download.pytorch.org/whl/cpu/torch-1.12.1-cp38-none-macosx_10_9_x86_64.whl", markers = "python_version == '3.8' and sys_platform == 'darwin' and platform_machine == 'x86_64'"},
    {url="https://download.pytorch.org/whl/cpu/torch-1.12.1-cp38-none-macosx_11_0_arm64.whl", markers = "python_version == '3.8' and sys_platform == 'darwin' and platform_machine == 'arm64'"},
    # Python 3.9
    {url="https://download.pytorch.org/whl/cpu/torch-1.12.1%2Bcpu-cp39-cp39-linux_x86_64.whl", markers = "python_version == '3.9' and sys_platform == 'linux' and platform_machine == 'x86_64'"},
    {url="https://download.pytorch.org/whl/cpu/torch-1.12.1-cp39-none-macosx_10_9_x86_64.whl", markers = "python_version == '3.9' and sys_platform == 'darwin' and platform_machine == 'x86_64'"},
    {url="https://download.pytorch.org/whl/cpu/torch-1.12.1-cp39-none-macosx_11_0_arm64.whl", markers = "python_version == '3.9' and sys_platform == 'darwin' and platform_machine == 'arm64'"},
    # Python 3.10
    {url="https://download.pytorch.org/whl/cpu/torch-1.12.1%2Bcpu-cp310-cp310-linux_x86_64.whl", markers = "python_version == '3.10' and sys_platform == 'linux' and platform_machine == 'x86_64'"},
    {url="https://download.pytorch.org/whl/cpu/torch-1.12.1-cp310-none-macosx_10_9_x86_64.whl", markers = "python_version == '3.10' and sys_platform == 'darwin' and platform_machine == 'x86_64'"},
    {url="https://download.pytorch.org/whl/cpu/torch-1.12.1-cp310-none-macosx_11_0_arm64.whl", markers = "python_version == '3.10' and sys_platform == 'darwin' and platform_machine == 'arm64'"}

]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
