[tool.poetry]
name = "site-search"
version = "0.1.0"
description = ""
authors = ["Andrey Vasnetsov <andrey@vasnetsov.com>"]

[tool.poetry.dependencies]

fastembed = "0.7.0"
python = ">=3.9,<3.11"
requests = "^2.28.1"
ultimate-sitemap-parser = "^0.5"
beautifulsoup4 = "^4.11.1"
tqdm = "^4.64.0"
fastapi = "^0.79.1"
qdrant-client = "^1.12.0"
scipy = "1.9.0"
python-dotenv = "^0.21.0"
blingfire = "^0.1.8"
uvicorn = "^0.18.3"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
