[package]
name = "rust_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "service"
path = "src/main.rs"

[[bin]]
name = "index_prefix"
path = "src/index_prefix.rs"

[[bin]]
name = "setup_collection"
path = "src/setup_collection.rs"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.71"
env_logger = "0.10.0"
ndarray = "0.15.6"
ort = "1.14"
qdrant-client = "1.3"
rust_tokenizers = "8.1.0"
safe-transmute = "0.11.2"
serde = "1.0.151"
serde_json = "1.0.103"
tokio = { version = "1.28.2", features = ["rt", "macros", "rt-multi-thread"] }
